--- a/prototipo-ui/telalogin/src/index.css
+++ b/prototipo-ui/telalogin/src/index.css
@@ -1,4 +1,5 @@
 body {
+  height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -8,39 +9,11 @@ body {
  
 }
 
+html{
+  height: 100%;
+  
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-.App{
-  text-align: center;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
-
-
-.labelName{
-    font-size: 20px;
-}
-
-.inputText{
-  text-align: center;
-  padding: 5px 40px;
-  margin: 8px 0;
-}
-
-
-.login{
-  background-color:#1E90FF;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  border-radius: 4px;
-  font-size: 16px;
 }
