--- a/prototipo-ui/prototipo/src/menu/menu_lista/css/Menu.css
+++ b/prototipo-ui/prototipo/src/menu/menu_lista/css/Menu.css
@@ -1,8 +1,67 @@
 .MenuList {
-    height: auto;
     width: 100%;
+    height: 100%;
+    overflow-y: auto;
 }
 
-.coll {
+.line {
+    list-style: none;
     float: left;
+    width: 400px;
+    height: 180px;
+}
+
+.product-image {
+    width: 150px;
+    height: 150px;
+    border: 2px solid gray;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+    border-bottom-left-radius: 6px;
+    position: absolute;
+}
+
+.product-button {
+    width: 30px;
+    height: 30px;
+    border: 2px solid gray;
+    border-top-left-radius: 5px;
+    background-color: rgb(113, 250, 95);
+    font-size: 20px;
+    position: absolute;
+    margin: 124px;
+}
+
+.product-title {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    position: absolute;
+    margin-left: 160px;
+}
+
+.product-descricao {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
+    position: absolute;
+    margin-left: 160px;
+    margin-top: 40px;
+    width: 200px;
+}
+
+.product-valor {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    position: absolute;
+    margin-left: 160px;
+    margin-top: 130px;
+    width: 200px;
+}
+
+.product-categoria {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 25px;
+    border: 5px solid #2d9bf0;
+    padding: 5px;
+    background-color: #2d9bf0;
+    color: #ffffff;
 }
