--- a/prototipo-ui/prototipo/src/layout/base.css
+++ b/prototipo-ui/prototipo/src/layout/base.css
@@ -15,6 +15,7 @@ html, body{
   width: 100%;
   background-color: blue;
   margin: 0px;
+  position: absolute;
 }
 
 .textheader {
@@ -25,23 +26,19 @@ html, body{
 }
 
 .content {
-    flex-grow: 1;
-    flex-shrink: 1;
-    flex-basis: 0;
-    width: 100%;
-    overflow-y: auto;
-    margin-bottom: 80px;
+    width: auto;
+    height: max-content;
+    display: flex;
+    position: absolute;
 }
   
 .footer {
-
   height: 80px;
   bottom: 0;
   background-color: #2d9bf0 ;
   width: 100%;
   margin: 0;
   position: absolute;
-  
 }
 
 .textfooter {
