--- a/prototipo-ui/prototipo/src/layout/base.css
+++ b/prototipo-ui/prototipo/src/layout/base.css
@@ -6,30 +6,26 @@ html, body{
 /*---------*/
 #root{
     height: 100%;
-    display: flex;
-    flex-direction: column;
 }
-
 .header {
   height: 60px;
   width: 100%;
   background-color: blue;
   margin: 0px;
-  position: absolute;
 }
 
 .textheader {
   color: white;
   margin: 0;
+  font-size: 30px;
   padding: 20px;
   font-weight: normal;
 }
 
 .content {
-    width: auto;
-    height: max-content;
-    display: flex;
-    position: absolute;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 0;
 }
   
 .footer {
@@ -38,18 +34,18 @@ html, body{
   background-color: #2d9bf0 ;
   width: 100%;
   margin: 0;
-  position: absolute;
 }
 
 .textfooter {
   text-align: center;
   color: white;
+  font-size: 35px;
   margin: 5px;
   font-weight: normal;
-  
 }
 
 .textcopy {
+  font-size: 17.5px;
   height: 0;
   font-weight: normal;
   margin-top: 0;
@@ -59,4 +55,6 @@ html, body{
 }
 .Comanda {
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
