--- a/prototipo-ui/prototipo/src/menu/style.css
+++ b/prototipo-ui/prototipo/src/menu/style.css
@@ -18,6 +18,7 @@ body{
 }
 
 .wrapper {
+  max-height: 100%;
   display: flex;
   min-height: 100%;
   color: rgba(88, 85, 85, 1);
@@ -38,6 +39,12 @@ body{
 
 .row_1{
   width: 100%;
+}
+
+.estabelecimento_title{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 35px;
+  margin: 0.5em 0;
 }
 
 .btn_extrato{
