Tela comanda integrada 1.0

--- a/prototipo-ui/prototipo/comanda/src/layout/base.css
+++ b/prototipo-ui/prototipo/comanda/src/layout/base.css
@@ -13,7 +13,15 @@ html, body{
   background-color: blue;
   margin: 0px;
 }
+.Container_QRCode{
+  display: block;
+  float: left;
+}
 
+.Container_PIN{
+  display: block;
+  float: left;
+}
 .textheader {
   color: white;
   margin: 0;
