--- a/comanda-frontend/src/css/base.css
+++ b/comanda-frontend/src/css/base.css
@@ -1,33 +1,36 @@
+/* Fontes */
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:100,200,300,400,500,600,700,800,900&display=swap');
+
 /*Extra css*/
 html, body{
   height: 100%;
   margin: 0;
 }
-/*---------*/
+
 #root{
   height: 100%;
 }
 .header {
-height: 60px;
-width: 100%;
-background-color: blue;
-margin: 0px;
+  height: 60px;
+  width: 100%;
+  background-color: blue;
+  margin: 0px;
 }
 .Container_QRCode{
-display: block;
-float: left;
+  display: block;
+  float: left;
 }
 
 .Container_PIN{
-display: block;
-float: left;
+  display: block;
+  float: left;
 }
 .textheader {
-color: white;
-margin: 0;
-font-size: 30px;
-padding: 20px;
-font-weight: normal;
+  color: white;
+  margin: 0;
+  font-size: 30px;
+  padding: 20px;
+  font-weight: normal;
 }
 
 .content {
@@ -38,32 +41,32 @@ font-weight: normal;
 }
 
 .footer {
-height: 100px;
-bottom: 0;
-background-color: #2d9bf0 ;
-width: 100%;
-margin: 0;
+  height: 100px;
+  bottom: 0;
+  background-color: #2d9bf0 ;
+  width: 100%;
+  margin: 0;
 }
 
 .textfooter {
-text-align: center;
-color: white;
-font-size: 35px;
-margin: 5px;
-font-weight: normal;
+  text-align: center;
+  color: white;
+  font-size: 35px;
+  margin: 5px;
+  font-weight: normal;
 }
 
 .textcopy {
-font-size: 17.5px;
-height: 0;
-font-weight: normal;
-margin-top: 0;
-text-align: right;
-color: white;
-padding: 0 20px;
+  font-size: 17.5px;
+  height: 0;
+  font-weight: normal;
+  margin-top: 0;
+  text-align: right;
+  color: white;
+  padding: 0 20px;
 }
 .Comanda {
-height: 100%;
-display: flex;
-flex-direction: column;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
