Ajustada tela de Pagamento

--- a/webapp/src/main/js/src/style.css
+++ b/webapp/src/main/js/src/style.css
@@ -66,6 +66,11 @@ html, body{
   flex-direction: column;
 }
 
+.overflow{
+  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
 #telaAbrirComanda #comandaSaudacao,
 #telaScanQrcode #titulo,
 #telaExtrato #titulo {
