--- a/webapp/src/main/js/src/style.css
+++ b/webapp/src/main/js/src/style.css
@@ -70,7 +70,9 @@ html, body{
   overflow: scroll;
   overflow-y: scroll;
   overflow-x: hidden;
+  width: 100%;
 }
+
 #telaAbrirComanda #comandaSaudacao,
 #telaScanQrcode #titulo,
 #telaExtrato #titulo {
@@ -105,9 +107,4 @@ html, body{
 
 #telaExtrato #selectCliente{
   min-width: 200px;
-}
-
-.floatLeft {
-  display: block !important;
-  float: left !important;
 }
