--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -3,14 +3,13 @@
     <head lang="en">
         <meta charset="UTF-8"/>
         <title>ReactJS + Spring Data REST</title>
-        <link rel="stylesheet" href="/main.css" />
     </head>
 
     <body>
         <!-- The key part in this template is the <div id="react"></div> component in the middle.-->
         <!-- It is where you will direct React to plug in the rendered output.-->
-        <div id="react"></div>
+        <div id="root"></div>
 
-        <script src="built/bundle.js"></script>
+        <script src="/built/bundle.js"></script>
     </body>
 </html>
