Alterado configuração do webpack para que ele fique dentro do diretório src/main/js
Excluido arquivos de configuração da pasta raiz do projeto, agora a configuração funciona a partir da pasta js, e o projeto é servido direto pelo app Java.

--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="https://www.thymeleaf.org">
     <head lang="en">
         <meta charset="UTF-8"/>
-        <title>ReactJS + Spring Data REST</title>
+        <title>Comanda BLUE - NextGen 2020</title>
     </head>
 
     <body>
